# MultiDrone

./: .gitignore  .pylintrc  CLAUDE.md  README.md  README_EXPERIMENT.md  experiment_results.csv  flightTester.py  package.json  pyproject.toml  requirements.txt  run_experiment.py  start.py  summary_metrics.csv  voice_test.py
ESP32/: ESP32_Firmware.cpp  ESP32_Firmware.ino  ESP32_Firmware.js  ESP_Firmware_1.ino  ESP_Firmware_new.ino
FlightController/: Betaflight.js
OPEN_BCI/: calibrate.py  download_eeg.ipynb  eeg_client.py  eeg_server.py  eeg_server_jae.py  eeg_simulator.py  mock_server.py  save_data.py  test.ipynb  test.py
Raspberry_Pi/: Raspberry_Pi.py  flight_log_20260505_011939.jsonl  flight_log_20260505_012023.jsonl  flight_log_20260505_012147.jsonl  flight_log_20260505_012532.jsonl  flight_log_20260508_014533.jsonl  flight_log_20260508_021756.jsonl  flight_log_20260508_021830.jsonl  flight_log_20260508_022206.jsonl  flight_log_20260508_022558.jsonl  flight_log_20260508_024443.jsonl  flight_log_20260508_024531.jsonl  flight_log_20260510_194051.jsonl  flight_log_20260510_194150.jsonl  flight_log_20260510_211824.jsonl  flight_log_20260510_212816.jsonl  flight_log_20260510_215130.jsonl  flight_log_20260510_215725.jsonl  flight_log_20260510_220215.jsonl
Simulator/: game.py
Tools/: calibrate_rc.py  combined.csv  experiment_results_both.csv  experiment_results_eeg_only.csv  experiment_results_voice_only.csv  get_data.py  rc_sniffer.js  ssvep.html  test1.csv
figure/: figure.ipynb
test/: README.md  data_analysis_example.py  test_runner.py  test_sequences.json
(+107 files in other folders)
