[project]
name = "droneProject"
version = "0.1.0"
description = "Sam"
requires-python = ">=3.12"

dependencies = [
    "numpy==2.4.4",
    "pandas==3.0.2",
    "matplotlib==3.10.9",
    "pyserial==3.5",
    "requests==2.33.1",
    "vosk==0.3.45",
    "websockets==16.0",
    "sounddevice==0.5.5",
    "tqdm==4.67.3",
    "pyyaml==6.0.3",
    "srt==3.5.3",
    "iso8601==2.1.0",
    "pylsl>=1.18.2",
    "scikit-learn>=1.8.0",
    "pygame>=2.6.1",
    "moabb>=1.5.0",
    "opencv-python>=4.13.0.92",
    "mediapipe>=0.10.35",
    "keyboard>=0.13.5",
]
